--- a/tasks/setup-initd.yml
+++ b/tasks/setup-initd.yml
@@ -5,7 +5,10 @@
   copy: dest=/etc/default/uwsgi-emperor src=etc/default/uwsgi-emperor owner=root group=www-data
 
 - name: Add the uwsgi configuration files
-  copy: dest=/etc/ src=etc/uwsgi-emperor owner=root group=www-data
+  template: dest=/etc/uwsgi-emperor/emperor.ini
+            src=etc/uwsgi-emperor/emperor.ini
+            owner=root
+            group=www-data
 
 - name: Create the init.d script
   template: src=etc/init.d/uwsgi-emperor.j2 dest=/etc/init.d/uwsgi-emperor owner=root group=www-data mode=755
