--- a/templates/etc/uwsgi-emperor/emperor.ini
+++ b/templates/etc/uwsgi-emperor/emperor.ini
@@ -16,10 +16,10 @@ no-orphans = true
 log-date = true
 
 # user identifier of uWSGI processes
-uid = www-data
+uid = {{ uwsgi_uid }}
 
 # group identifier of uWSGI processes
-gid = www-data
+gid = {{ uwsgi_gid }}
 
 # vassals directory
-emperor = /etc/uwsgi-emperor/vassals
+emperor = {{ uwsgi_vassals_path }}
