--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,5 +19,11 @@
         owner={{ ansible_ssh_user }}
         group={{ ansible_ssh_user }}
 
+- name: Logging folder permissions
+  file: state=directory
+        path=/var/log/uwsgi
+        owner={{ ansible_ssh_user }}
+        group={{ ansible_ssh_user }}
+
 - name: Make sure uwsgi-emperor is running (and runs on boot)
   service: name=uwsgi-emperor state=started enabled=yes
