--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,19 +11,19 @@
   template: dest=/etc/uwsgi-emperor/emperor.ini
             src=etc/uwsgi-emperor/emperor.ini
             owner=root
-            group=www-data
+            group={{ uwsgi_gid }}
 
 - name: Create apps folder
   file: state=directory
         path={{ uwsgi_vassals_path }}
-        owner={{ ansible_ssh_user }}
-        group={{ ansible_ssh_user }}
+        owner={{ uwsgi_uid }}
+        group={{ uwsgi_gid }}
 
 - name: Logging folder permissions
   file: state=directory
         path=/var/log/uwsgi
-        owner={{ ansible_ssh_user }}
-        group={{ ansible_ssh_user }}
+        owner={{ uwsgi_uid }}
+        group={{ uwsgi_gid }}
 
 - name: Make sure uwsgi-emperor is running (and runs on boot)
   service: name=uwsgi-emperor state=started enabled=yes
